# game_of_hex-in-Cpp

./: README.md  game_of_hex  game_of_hex.cpp  hex  weak2.cpp
code/: CMakeLists.txt  classes.cpp  classes.h  funs.h  game_of_hex.cpp
readme/: README.md
